# nrf-softsim

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  overlay-softsim.conf  thingy91_pm_static.yml  west.yml
.github/workflows/: artifact-release.yml  clang-format.yml  lint-commits.yml  markdown-link-checker.yml  pr_commit_checks.yml  release-please.yml  softsim-build-using-docker.yml  softsim-zephyr-rtos-ci.yml
boards/: thingy91x_nrf9151_pm_static.yml
config/: memfault_metrics_heartbeat_config.def
lib/: CMakeLists.txt  build_asserts.c  crypto_port.c  crypto_port.h  f_cache.c  f_cache.h  fs_port.c  fs_port.h  heap_port.c  nrf_softsim.c  profile.c  profile.h  provision.c  provision.h  ss_cache.c  ss_cache.h  ss_crypto.c  ss_crypto.h  ss_fs.c  ss_heap.c  ss_littlefs.c  ss_logp_zephyr.c  ss_profile.c  ss_profile.h  ss_provision.c  ss_provision.h  storage.c
lib/include/: nrf_softsim.h
lib/include/onomondo/softsim/: Makefile.am  Makefile.in  file.h  fs_port.h  list.h  log.h  mem.h  softsim.h  storage.h  utils.h
lib/profile/: template.hex
littlefs/files/: 3f00.def
littlefs/scripts/: README.md  generate_c_arrays.py  generate_littlefs_partition.py  ss_static_files.c
samples/softsim/: prj.conf
samples/softsim/src/: main.c
samples/softsim_external_profile/: CMakeLists.txt  overlay-static.conf  prj.conf
samples/softsim_external_profile/src/: main.c
samples/softsim_preprovisioned_profile/: CMakeLists.txt  README.md  prj.conf
samples/softsim_preprovisioned_profile/src/: main.c
samples/softsim_static_profile/: CMakeLists.txt  pm_static.yml  prj.conf
samples/softsim_static_profile/src/: main.c
samples/softsim_static_profile_memfault/: CMakeLists.txt  pm_static.yml  prj.conf  sysbuild.conf
samples/softsim_static_profile_memfault/src/: main.c
sysbuild/: CMakeLists.txt  Kconfig
zephyr/: module.yml
